<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_least">

        <TextView
            style="@style/text_item_tite_level"
            android:layout_marginTop="@dimen/text_least"
            android:text="@string/profile_picture" />

        <ImageView
            android:id="@+id/img_header"
            style="@style/mine_iv_head"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/fab_margin"
            android:src="@mipmap/header_mine" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/text_item_tite_level"
            android:layout_centerVertical="true"
            android:text="@string/login_id" />

        <EditText
            android:id="@+id/edit_login_id"
            style="@style/edit_item"
            android:hint="@string/login_account" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/text_item_tite_level"
            android:layout_centerVertical="true"
            android:text="@string/position" />

        <EditText
            android:id="@+id/edit_position"
            style="@style/edit_item"
            android:hint="@string/your_position" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/text_item_tite_level"
            android:layout_centerVertical="true"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/edit_name"
            style="@style/edit_item"
            android:hint="@string/your_name" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/text_item_tite_level"
            android:layout_centerVertical="true"
            android:text="@string/sex" />

        <EditText
            android:id="@+id/edit_sex"
            style="@style/edit_item"
            android:hint="@string/your_gender" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/text_item_tite_level"
            android:layout_centerVertical="true"
            android:text="@string/birthday" />

        <EditText
            android:id="@+id/edit_birthday"
            style="@style/edit_item"
            android:hint="@string/your_birthday" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/text_item_tite_level"
            android:layout_centerVertical="true"
            android:text="@string/mobile_phone" />

        <EditText
            android:id="@+id/edit_phone"
            style="@style/edit_item"
            android:hint="@string/your_phone_number" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/text_item_tite_level"
            android:layout_centerVertical="true"
            android:text="@string/email_address" />

        <EditText
            android:id="@+id/edit_email"
            style="@style/edit_item"
            android:hint="@string/e_mail_address" />

    </RelativeLayout>

</LinearLayout>