<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <TextView
        style="@style/text_tite_small_one"
        android:text="@string/old_password" />

    <EditText
        android:id="@+id/edit_old_pwd"
        style="@style/editText_password"
        android:hint="@string/hint_password" />

    <TextView
        style="@style/text_tite_small"
        android:text="@string/new_password" />

    <EditText
        android:id="@+id/edit_new_pwd"
        style="@style/editText_password"
        android:hint="@string/hint_password" />

    <TextView
        style="@style/text_tite_small"
        android:text="@string/confirm_new_password" />

    <EditText
        android:id="@+id/edit_confirm_new_pwd"
        style="@style/editText_password"
        android:hint="@string/hint_password" />

    <TextView
        android:layout_width="wrap_content"
        android:textSize="@dimen/text_level"
        android:textColor="@color/red"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/text_top_margin"
        android:text="@string/passwd_ps"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/btn_update_password"
            style="@style/button_page"
            android:text="@string/modify_password" />

        <RadioButton
            android:id="@+id/radio_display_password"
            android:textSize="@dimen/text_level"
            android:textColor="@color/colorHite"
            android:text="@string/display_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_update_password"
            android:layout_alignLeft="@+id/btn_update_password" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_below="@+id/btn_update_password"
            android:layout_alignRight="@+id/btn_update_password"
            style="@style/text_item_end"
            android:textColor="@color/blue"
            android:text="@string/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</LinearLayout>